--- a/quickstart-dubbo/pom.xml
+++ b/quickstart-dubbo/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>quickstart-rpc-dubbo</artifactId>
+	<artifactId>quickstart-dubbo</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}-${project.version}</name>
 	<description>Demo project for XXX</description>
