--- a/quickstart-dubbo-old/pom.xml
+++ b/quickstart-dubbo-old/pom.xml
@@ -10,27 +10,33 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>quickstart-dubbo</artifactId>
+    <artifactId>quickstart-dubbo-old</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}-${project.version}</name>
     <description>Demo project for XXX</description>
 
     <properties>
-        <dubbo.version>3.0.4</dubbo.version>
-        <curator.version>4.3.0</curator.version>
+        <dubbo.version>2.6.11</dubbo.version>
+        <curator.version>4.0.1</curator.version>
     </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>org.apache.dubbo</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
             <version>${dubbo.version}</version>
         </dependency>
 
         <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.11</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.curator</groupId>
-            <artifactId>curator-x-discovery</artifactId>
+            <artifactId>curator-framework</artifactId>
             <version>${curator.version}</version>
         </dependency>
 
