--- a/quickstart-tars/pom.xml
+++ b/quickstart-tars/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>org.quickstart</groupId>
 		<artifactId>quickstart-rpc</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>..</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -14,7 +13,7 @@
 	<packaging>jar</packaging>
 	<name>${project.artifactId}-${project.version}</name>
 	<url>http://maven.apache.org</url>
-	<description>Demo project for Spring Boot Admin</description>
+	<description>Demo project for XXX</description>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
